Add basic app configuration, components and styling.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import './styles/reset';
+@import './styles/extendables';
+@import './styles/global';
+
+@import './styles/buttons';
+@import './styles/forms';
+@import './styles/typography';
