--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,3 +18,7 @@ $container-width:           1140px;
 $borderRadius-default:      5px;
 $boxShadow-default:         0 0 10px $colorAlto;
 $boxShadow-default-hover:   0 0 15px $colorAlto;
+
+// Fonts
+$fontBody: 'Montserrat', sans-serif;
+$fontHeading: 'Noto Sans TC', sans-serif;
