--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 .h1,
 .h2,
 .h3,
@@ -12,6 +14,7 @@ h5,
 h6 {
   margin-bottom: 1.5rem;
   margin-top: 1rem;
+  font-family: $fontHeading;
   font-weight: 500;
   line-height: 1.2;
 }
