Some attempts at user login.

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,10 @@
 <div class="header">
   <nav class="header__nav">
-    <li class="nav__item">
+    <li
+      class="nav__item"
+      routerLinkActive="active"
+      [routerLinkActiveOptions]="{ exact: true }"
+    >
       <a routerLink="/">Home</a>
     </li>
     <li class="nav__item" routerLinkActive="active">
