--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -14,6 +14,10 @@
   .nav__item {
     display: inline-block;
     margin: 0 20px;
+
+    &.active a {
+      text-decoration: underline;
+    }
   }
 
   a {
