Add fetchCountry method to the service.

--- a/src/app/games/components/game-single/game-single.component.html
+++ b/src/app/games/components/game-single/game-single.component.html
@@ -7,11 +7,15 @@
   </div>
   <div class="game__players-wrapper">
     <div class="game__playes-home">
-      {{ game.homeCountryId }}
+      <span class="game-player">
+        {{ game.homeCountryId }}
+      </span>
     </div>
-    <span>:</span>
+    <span class="spacer">:</span>
     <div class="game__playes-away">
-      {{ game.awayCountryId }}
+      <span class="game-player">
+        {{ game.awayCountryId }}
+      </span>
     </div>
   </div>
 </div>
