--- a/src/app/games/components/game-single/game-single.component.scss
+++ b/src/app/games/components/game-single/game-single.component.scss
@@ -4,12 +4,16 @@
   &-single__header {
     display: flex;
     align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid $colorAlto;
     margin-bottom: 20px;
   }
 
   &-single__footer {
     display: flex;
     justify-content: space-between;
+    padding-top: 20px;
+    border-top: 1px solid $colorAlto-06;
 
     > div {
       width: 100%;
@@ -17,9 +21,28 @@
   }
 
   &-single {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 600px;
     padding: 20px 15px;
-    border: 1px solid $colorAlto;
-    border-radius: $borderRadius-default;
-    margin: 5px 0 15px;
+    margin: 5px auto 25px;
   }
+
+  &__players-wrapper {
+    display: flex;
+
+    > div {
+      margin: 0 10px;
+    }
+  }
+
+  &-player {
+    font-size: 4rem;
+  }
+}
+
+.spacer {
+  color: $colorAlto;
+  font-size: 3.8rem;
 }
