--- a/src/app/games/components/game-single/game-single.component.html
+++ b/src/app/games/components/game-single/game-single.component.html
@@ -1,36 +1,54 @@
-<div class="game-single__header" *ngIf="game">
-  <a [routerLink]="['/games']">< Back to all games</a>
-</div>
-<div class="game-single__body game-single">
-  <div class="game__number">
-    <h1>Game #{{ game.id }}</h1>
+<div *ngIf="game">
+  <div class="game-single__header">
+    <a [routerLink]="['/games']">< Back to all games</a>
   </div>
-  <div class="game__players-wrapper">
-    <div class="game__playes-home">
-      <span class="game-player">
-        {{ game.homeCountryId }}
-      </span>
+  <div class="game-single__body game-single">
+    <div class="game__number">
+      <h1>Game #{{ game.id }}</h1>
     </div>
-    <span class="spacer">:</span>
-    <div class="game__playes-away">
-      <span class="game-player">
-        {{ game.awayCountryId }}
-      </span>
+    <div class="game__players-wrapper">
+      <div class="game__playes-home">
+        <div class="player-flag">
+          <span *ngIf="homeCountry" class="player-flag">
+            <img src="{{ homeCountry.flagImg }}" alt="" />
+          </span>
+        </div>
+        <div class="player-name">
+          <span class="game-player">
+            {{ homeCountry.name }}
+          </span>
+        </div>
+        <span class="spacer-name">Home</span>
+      </div>
+      <span class="spacer">:</span>
+      <div class="game__playes-away">
+        <div class="player-flag">
+          <span *ngIf="awayCountry" class="player-flag">
+            <img src="{{ awayCountry.flagImg }}" alt="" />
+          </span>
+        </div>
+        <div class="player-name">
+          <span class="game-player">
+            {{ awayCountry.name }}
+          </span>
+        </div>
+        <span class="spacer-name">Away</span>
+      </div>
+    </div>
+    <div class="game__predictions">
+      <h4>My prediciton</h4>
+      <app-prediction-add
+        [gameId]="game.id"
+        [homeCountryId]="game.homeCountryId"
+        [awayCountryId]="game.awayCountryId"
+        [homeScore]="game.homeScore"
+        [awayScore]="game.awayScore"
+      ></app-prediction-add>
     </div>
   </div>
-</div>
-<div class="game-single__footer">
-  <div class="footer__left">
-    <h3>My prediciton</h3>
-    <app-prediction-add
-      [gameId]="game.id"
-      [homeCountryId]="game.homeCountryId"
-      [awayCountryId]="game.awayCountryId"
-      [homeScore]="game.homeScore"
-      [awayScore]="game.awayScore"
-    ></app-prediction-add>
-  </div>
-  <div class="footer__right">
-    <h4>Predictions by other users</h4>
+  <div class="game-single__footer">
+    <div class="footer__right">
+      <h4>Predictions by other users</h4>
+    </div>
   </div>
 </div>
