--- a/src/app/games/components/prediction-add/prediction-add.component.html
+++ b/src/app/games/components/prediction-add/prediction-add.component.html
@@ -3,27 +3,29 @@
   (ngSubmit)="onSubmit(home, away)"
   class="form-predictions"
 >
-  <div class="form-group">
-    <input
-      type="number"
-      name="homeScore"
-      id="homeScore"
-      class="form-control"
-      formControlName="homeScore"
-      #home
-    />
-    <label for="homeScore">Home</label>
-  </div>
-  <div class="form-group">
-    <input
-      type="number"
-      name="awayScore"
-      id="awayScore"
-      class="form-control"
-      formControlName="awayScore"
-      #away
-    />
-    <label for="awayScore">Guest</label>
+  <div class="form-items-wrapper">
+    <div class="form-group">
+      <input
+        type="number"
+        name="homeScore"
+        id="homeScore"
+        class="form-control"
+        formControlName="homeScore"
+        #home
+      />
+      <label for="homeScore">Home</label>
+    </div>
+    <div class="form-group">
+      <input
+        type="number"
+        name="awayScore"
+        id="awayScore"
+        class="form-control"
+        formControlName="awayScore"
+        #away
+      />
+      <label for="awayScore">Guest</label>
+    </div>
   </div>
   <button type="submit" class="btn btn-success">Submit</button>
 </form>
