--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,27 +1,35 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit(email, password)">
-  <div class="form-group">
-    <input
-      type="text"
-      id="email"
-      name="email"
-      class="form-control"
-      formControlName="email"
-      #email
-    />
-    <label for="email">Email</label>
-  </div>
-  <div class="form-group">
-    <input
-      type="text"
-      id="password"
-      name="password"
-      class="form-control"
-      formControlName="password"
-      #password
-    />
-    <label for="password">Password</label>
-  </div>
-  <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">
-    Login
-  </button>
-</form>
+<div class="container">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit(email, password)">
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input
+        type="text"
+        id="email"
+        name="email"
+        class="form-control"
+        formControlName="email"
+        #email
+      />
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input
+        type="text"
+        id="password"
+        name="password"
+        class="form-control"
+        formControlName="password"
+        #password
+      />
+    </div>
+    <div class="form-group btn-wrapper">
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="!loginForm.valid"
+      >
+        Login
+      </button>
+    </div>
+  </form>
+</div>
