Set up basic authentication.
Add logged-in user to the store.

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -8,7 +8,7 @@
       <a routerLink="/">Home</a>
     </li>
     <li class="nav__item" routerLinkActive="active">
-      <a routerLink="/login">Login</a>
+      <a routerLink="/login">{{ userLoggedIn ? 'Logout' : 'Login' }}</a>
     </li>
   </nav>
 </div>
