--- a/src/app/games/components/prediction-add/prediction-add.component.html
+++ b/src/app/games/components/prediction-add/prediction-add.component.html
@@ -1,6 +1,6 @@
 <form
   [formGroup]="predictionForm"
-  (ngSubmit)="onSubmit(home, away)"
+  (ngSubmit)="onSubmit()"
   class="form-predictions"
 >
   <div class="form-items-wrapper">
@@ -11,7 +11,6 @@
         id="homeScore"
         class="form-control"
         formControlName="homeScore"
-        #home
       />
       <label for="homeScore">Home</label>
     </div>
@@ -22,7 +21,6 @@
         id="awayScore"
         class="form-control"
         formControlName="awayScore"
-        #away
       />
       <label for="awayScore">Guest</label>
     </div>
