Fix updating of the single prediction.

--- a/src/app/games/components/prediction-add/prediction-add.component.html
+++ b/src/app/games/components/prediction-add/prediction-add.component.html
@@ -25,5 +25,7 @@
       <label for="awayScore">Guest</label>
     </div>
   </div>
-  <button type="submit" class="btn btn-success">Submit</button>
+  <button type="submit" class="btn btn-success">
+    {{ editMode ? 'Edit prediction' : 'Add prediction' }}
+  </button>
 </form>
