--- a/src/app/games/containers/game-single/game-single.component.scss
+++ b/src/app/games/containers/game-single/game-single.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../styles/variables';
+@import '../../../../styles/breakpoints';
 
 .game {
   &-single__header {
@@ -52,8 +53,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 4rem;
+    font-size: 3rem;
     text-align: center;
+
+    @include xs {
+      font-size: 2rem;
+    }
   }
 
   &__predictions {
