--- a/src/app/games/containers/game-single/game-single.component.scss
+++ b/src/app/games/containers/game-single/game-single.component.scss
@@ -15,6 +15,8 @@
     justify-content: space-between;
     padding-top: 20px;
     border-top: 1px solid $colorAlto-06;
+    max-width: 800px;
+    margin: 5px auto 25px;
 
     > div {
       width: 100%;
@@ -28,6 +30,10 @@
     max-width: 600px;
     padding: 20px 15px;
     margin: 5px auto 25px;
+
+    h1 {
+      letter-spacing: $letterSpacing-default;
+    }
   }
 
   &__players-wrapper {
@@ -55,6 +61,8 @@
     align-items: center;
     font-size: 3rem;
     text-align: center;
+    text-transform: uppercase;
+    letter-spacing: $letterSpacing-default;
 
     @include xs {
       font-size: 2rem;
