--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -2,13 +2,14 @@
 
 .btn {
   display: block;
-  border: 1.5px solid $colorMineShaft;
+  border: 1px solid $colorMineShaft;
   border-radius: $borderRadius-default;
   padding: 10px 15px;
-  color: $colorMineShaft;;
-  font-weight: 600;
+  color: $colorMineShaft;
+  font-weight: 500;
   text-align: center;
   transition: all 0.3s ease;
+  text-transform: uppercase;
 
   &:focus,
   &:hover {
