--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $colorAlto-06:          rgba(212, 212, 212, 0.6);
 $colorAlto-01:          rgba(212, 212, 212, 0.1);
 $colorSilverChalice:    #999999;
 $colorMineShaft:        #262626;
+$colorMineShaft-05:     rgba(38, 38, 38, 0.5);
 $colorBlack:            #000000;
 
 $colorChesnutRose:      #D4645E;
@@ -20,9 +21,12 @@ $borderRadius-default:      5px;
 $boxShadow-default:         0 0 10px $colorAlto;
 $boxShadow-default-hover:   0 0 15px $colorAlto;
 
-// Fonts
-$fontBody: 'Montserrat', sans-serif;
-$fontHeading: 'Noto Sans TC', sans-serif;
+// Typography
+$fontBody: 'Livvic', sans-serif;
+$fontHeading: 'Coda', cursive;
+
+$letterSpacing-default: 0.15em;
+$letterSpacing-large: 0.3em;
 
 // Transitions
 $transition-default: all ease 0.3s;
