--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,6 +12,7 @@ $colorChesnutRose:      #D4645E;
 $colorMantis:           #6FC06C;
 
 // Widths
+$lg-up-width:               2880px;
 $md-width:                  1024px;
 $sm-width:                  768px;
 $xs-width:                  375px;
