--- a/src/app/games/components/game-details/game-details.component.scss
+++ b/src/app/games/components/game-details/game-details.component.scss
@@ -6,6 +6,7 @@
     margin: 5px 0 15px;
     
     > a {
+      position: relative;
       display: grid;
       grid-template-columns: 1fr 3fr;
       grid-template-rows: 1fr;
@@ -21,8 +22,8 @@
       &:focus,
       &:hover {
         text-decoration: none;
-        border: 1px solid $colorMineShaft;
         box-shadow: $boxShadow-default;
+        transform: scale(1.1);
       }
     }
   }
@@ -66,4 +67,37 @@
 
 .prediction-added > a {
   border-color: $colorMantis;
+
+  &::after,
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+  }
+
+  &::before {
+    content: 'Prediction added !';
+    top: 13px;
+    right: 13px;
+    padding: 5px 7px;
+    border: 2px dashed $colorMantis;
+    border-radius: 30px;
+    background-color: $colorWhite;
+    z-index: 1;
+  }
+
+  &::after {
+    top: 0;
+    right: 0;
+    height: 0;
+    width: 0;
+    border-style: solid;
+    border-width: 50px 0 0 50px;
+    border-color: $colorMantis transparent transparent transparent;
+  }
+
+  &:focus,
+  &:hover {
+    border-width: 2px;
+  }
 }
