Add validation on Add prediction form.

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -52,3 +52,9 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+
+input {
+  .ng-invalid.ng-touched {
+    border-color: $colorChesnutRose;
+  }
+}
