--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $colorBlack:            #000000;
 
 $colorChesnutRose:      #D4645E;
 $colorMantis:           #6FC06C;
+$colorBlueberry:        #4392F1;
 
 // Widths
 $lg-up-width:               2880px;
