--- a/src/app/games/components/prediction-add/prediction-add.component.html
+++ b/src/app/games/components/prediction-add/prediction-add.component.html
@@ -6,7 +6,8 @@
   <div class="form-items-wrapper">
     <div class="form-group">
       <input
-        type="number"
+        type="text"
+        pattern="[0-9]*"
         name="homeScore"
         id="homeScore"
         class="form-control"
@@ -16,7 +17,8 @@
     </div>
     <div class="form-group">
       <input
-        type="number"
+        type="text"
+        pattern="[0-9]*"
         name="awayScore"
         id="awayScore"
         class="form-control"
@@ -25,7 +27,15 @@
       <label for="awayScore">Guest</label>
     </div>
   </div>
-  <button type="submit" class="btn btn-success">
+  <button
+    type="submit"
+    class="btn btn-success"
+    [disabled]="!predictionForm.valid"
+  >
     {{ editMode ? 'Edit prediction' : 'Add prediction' }}
   </button>
 </form>
+
+<span *ngIf="!predictionForm.valid" class="message message-info">
+  Only numbers allowed!
+</span>
