Add validation on Login form.

--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,6 +1,11 @@
 <div class="container">
-  <div class="alert" *ngIf="message">
-    {{ message }}
+  <div
+    class="message__wrapper-flex message__wrapper-flex--center"
+    *ngIf="messageType == 'error'"
+  >
+    <div class="message message-{{ messageType }}">
+      <span *ngIf="messageType == 'error'"> ❌ {{ messageText }} </span>
+    </div>
   </div>
   <form
     [formGroup]="loginForm"
@@ -15,17 +20,31 @@
         name="email"
         class="form-control"
         formControlName="email"
+        required
       />
+      <span
+        class="message message--inline message-error"
+        *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched"
+        >This field is required.</span
+      >
     </div>
     <div class="form-group">
       <label for="password">Password</label>
       <input
-        type="text"
+        type="password"
         id="password"
         name="password"
         class="form-control"
         formControlName="password"
+        required
       />
+      <span
+        class="message message--inline message-error"
+        *ngIf="
+          !loginForm.get('password').valid && loginForm.get('password').touched
+        "
+        >This field is required.</span
+      >
     </div>
     <div class="form-group btn-wrapper">
       <button
@@ -38,6 +57,27 @@
     </div>
   </form>
   <ng-template #logout>
-    <a class="btn btn-primary" (click)="onLogout()">Logout</a>
+    <div class="logout-wrapper">
+      <div class="logout-wrapper__text">
+        <div *ngIf="messageType == 'success'">
+          <div class="message message-{{ messageType }}">
+            <span> ✅ {{ messageText }} </span>
+          </div>
+          <img
+            src="https://media.giphy.com/media/8RxCFgu88jUbe/giphy.gif"
+            alt="{{ messageType }}"
+          />
+        </div>
+        <a class="btn btn-primary" (click)="onLogout()">Logout</a>
+      </div>
+    </div>
   </ng-template>
+  <div class="message__wrapper-flex message__wrapper-flex--center">
+    <span
+      *ngIf="!loginForm.valid && loginForm.touched"
+      class="message message-error"
+    >
+      ❌ Issues Issues! ❌
+    </span>
+  </div>
 </div>
