--- a/src/app/games/containers/game-single/game-single.component.scss
+++ b/src/app/games/containers/game-single/game-single.component.scss
@@ -70,8 +70,15 @@
   }
 
   &__predictions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     margin-top: 40px;
+
+    > * {
+      width: 100%;
+    }
 
     h4 {
       text-align: center;
