--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -54,7 +54,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 input {
-  .ng-invalid.ng-touched {
+  &.ng-invalid.ng-touched {
     border-color: $colorChesnutRose;
   }
 }
