--- a/src/app/games/components/prediction-add/prediction-add.component.scss
+++ b/src/app/games/components/prediction-add/prediction-add.component.scss
@@ -17,21 +17,11 @@
 
   &-group {
     label {
-      display: block;
       font-size: 1.2rem;
-      text-transform: none;
-      line-height: 2;
-      text-align: right;
-      color: $colorAlto;
     }
-  }
 
-  &-control {
-    text-align: center;
-    max-width: 100px;
-
-    &:focus + label {
-      color: $colorMineShaft;
+    .mat-input-element {
+      text-align: center;
     }
   }
 }
