--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
+@import './styles/color-palette';
+
 @import './styles/reset';
 @import './styles/extendables';
 @import './styles/global';
+@import './styles/animations';
 
 @import './styles/buttons';
 @import './styles/forms';
