--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -4,57 +4,14 @@
   margin-bottom: 1rem;
 }
 
-.form-control {
-  display: block;
+// Material override
+.mat-form-field {
+  font-family: $fontHeading;
   width: 100%;
-  padding: 0.875rem 1rem;
-  font-size: 1.5rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: $colorMineShaft;
-  background-color: $colorWhite;
-  background-clip: padding-box;
-  border: 1px solid $colorAlto;
-  border-radius: $borderRadius-default;
-  transition: $transition-default;
-
-  &:focus,
-  &:hover {
-    outline: none;
-  }
-
-  &[type=number] {
-    border: 1px dashed $colorAlto;
-
-    &:focus {
-      border-style: solid;
-    }
-  }
 }
 
-label {
-  display: inline-block;
-  margin-bottom: .5rem;
-  width: 100%;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  font-size: 1.3rem;
-  transition: $transition-default;
-
-  input {
-    margin-top: .5rem;
-  }
-}
-
-// Remove arrows for number inputs
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
-}
-
-input {
-  &.ng-invalid.ng-touched {
-    border-color: $colorChesnutRose;
+mat-label {
+  .game__predictions & {
+    font-size: 1.6rem;
   }
 }
