--- a/src/app/games/components/prediction-add/prediction-add.component.html
+++ b/src/app/games/components/prediction-add/prediction-add.component.html
@@ -35,7 +35,7 @@
   </div>
   <button
     mat-raised-button
-    color="accent"
+    color="primary"
     type="submit"
     [disabled]="!predictionForm.valid"
   >
