--- a/src/app/games/containers/game-single/game-single.component.scss
+++ b/src/app/games/containers/game-single/game-single.component.scss
@@ -3,10 +3,7 @@
 
 .game {
   &-single__header {
-    display: flex;
-    align-items: center;
     padding-bottom: 10px;
-    border-bottom: 1px solid $colorAlto;
     margin-bottom: 20px;
   }
 
@@ -14,7 +11,6 @@
     display: flex;
     justify-content: space-between;
     padding-top: 20px;
-    border-top: 1px solid $colorAlto-06;
     max-width: 800px;
     margin: 5px auto 25px;
 
@@ -76,12 +72,23 @@
     width: 100%;
     margin-top: 40px;
 
-    > * {
-      width: 100%;
+    &-header {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 30px;
+
+      button {
+        margin-left: 20px;
+      }
+
+      h3 {
+        margin-bottom: 0;
+      }
     }
 
-    h4 {
-      text-align: center;
+    > * {
+      width: 100%;
     }
   }
 }
