Update Login link.

--- a/src/app/games/containers/game-single/game-single.component.html
+++ b/src/app/games/containers/game-single/game-single.component.html
@@ -62,7 +62,9 @@
       <h4>My prediciton</h4>
       <p>In order to add a prediction you must log in!</p>
       <br />
-      <a [routerLink]="['/login']">To login link</a>
+      <a [routerLink]="['/login']" mat-stroked-button color="accent"
+        >Login now.</a
+      >
     </ng-template>
   </div>
   <mat-divider></mat-divider>
