Fix logginng-in/out issues.

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -9,9 +9,7 @@
         <a mat-button routerLink="/">Home</a>
       </li>
       <li class="nav__item" routerLinkActive="active">
-        <a mat-button routerLink="/login">{{
-          userLoggedIn ? 'Logout' : 'Login'
-        }}</a>
+        <a mat-button routerLink="/login">Account</a>
       </li>
     </nav>
   </mat-toolbar-row>
