--- a/src/app/games/components/game-details/game-details.component.scss
+++ b/src/app/games/components/game-details/game-details.component.scss
@@ -57,6 +57,11 @@
   &-details {
     width: 100%;
     height: 100%;
+    opacity: 0.3;
+
+    &.show {
+      opacity: 1;
+    }
   }
 
   &__number {
